<resources>
    <string name="app_name">SDK</string>
    <string name="home">Home</string>
    <string name="gaming">Gaming</string>
    <string name="inbox">Inbox</string>
    <string name="profile">Profile</string>
    <string name="dashboard">Dashboard</string>
    <string name="email">Email</string>
    <string name="user_id">User ID</string>
    <string name="update">Update</string>
    <string name="notification_image">Notification Image</string>
    <string name="mark_all_as_read">Mark All As Read</string>
    <string name="delete_all">Delete All</string>
    <string name="mark_inbox_as_read">Mark Inbox As Read</string>
    <string name="delete_inbox">Delete Inbox</string>
    <string name="add_item">Add Item</string>
    <string name="add">Add</string>
    <string name="enter_item_name">Enter Item Name</string>
    <string name="add_item_to_cart">Add Item to Cart</string>
    <string name="welcome">Welcome</string>
    <string name="welcome_message">Welcome to the Optimove Android SDK test</string>
    <string name="withdraw">Withdraw</string>
    <string name="deposit">Deposit</string>
    <string name="balance">Balance</string>
    <string name="bet_amount">Bet Amount</string>
    <string name="roll_dice">Roll Dice</string>
    <string name="roll">Roll</string>
    <string name="dice_image">dice image</string>
    <string name="rules">Rules</string>
    <string name="lorem_ipsum_short">Lorem ipsum dolor sit amet</string>
    <string name="lorem_ipsum_medium">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque imperdiet venenatis massa eu imperdiet. Ut a gravida eros. Maecenas ligula mi, laoreet a ullamcorper quis, sagittis vitae lorem. Aenean dui dui, ornare pellentesque nibh sit amet, ultrices tempor libero.</string>
    <string name="lorem_ipsum_long">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque imperdiet venenatis massa eu imperdiet. Ut a gravida eros. Maecenas ligula mi, laoreet a ullamcorper quis, sagittis vitae lorem. Aenean dui dui, ornare pellentesque nibh sit amet, ultrices tempor libero. Duis sit amet tincidunt nibh. Ut justo tortor, pretium nec pulvinar in, sagittis id tellus. Integer ultricies id diam a hendrerit. Duis dignissim leo sit amet ligula volutpat egestas. In eleifend convallis justo et facilisis. Quisque malesuada vel mauris at tristique. Morbi dapibus leo maximus aliquam vehicula. In in eros finibus, sollicitudin urna ac, mattis purus. Sed sodales lacus non quam maximus commodo. Aliquam ultrices, odio vel ullamcorper fermentum, mauris nisl elementum nunc, suscipit tristique dolor felis et augue.</string>
    <string name="close">Close</string>
    <string name="ok">OK</string>
    <string name="indicator">indicator</string>
    <string name="page_icon">Page icon</string>
    <string name="credentials">Credentials</string>
    <string name="my_location">My Location</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="preference_center">Preference Center</string>
    <string name="subscribed_channels_text">\nChannels:\n%1$s</string>
    <string name="subscribed_topics_text">\nTopics:\n%1$s</string>
    <string name="standard_initialization">Standard Initialization</string>
    <string name="delayed_initialization">Delayed Initialization</string>
    <string name="get_preferences">Get Preferences</string>
    <string name="initialisation">Initialisation</string>
    <string name="choose_initialisation_type">Choose Initialisation Type</string>
    <string name="late_initialisation">Late Initialisation</string>
    <string name="standard_initialisation">Standard Initialisation</string>
    <string name="back_button">Back button</string>

</resources>
