<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_initialisation">

    <fragment
        android:id="@+id/navigation_initialisation"
        android:name="com.optimove.android.optimovemobilesdk.ui.initialisation.InitialisationFragment"
        android:label="@string/initialisation"
        tools:layout="@layout/fragment_initialisation" >
        <action
            android:id="@+id/action_navigation_initialisation_to_navigation_home"
            app:destination="@id/navigation_home" />
    </fragment>

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.optimove.android.optimovemobilesdk.ui.home.HomeFragment"
        android:label="@string/home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_navigation_home_to_navigation_gaming"
            app:destination="@id/navigation_gaming" />
        <action
            android:id="@+id/action_navigation_home_to_navigation_profile"
            app:destination="@id/navigation_credentials" />
        <action
            android:id="@+id/action_navigation_home_to_navigation_dashboard"
            app:destination="@id/navigation_dashboard" />
        <action
            android:id="@+id/action_navigation_home_to_navigation_location"
            app:destination="@id/navigation_location" />
        <action
            android:id="@+id/action_navigation_home_to_navigation_preference_center"
            app:destination="@id/navigation_preference_center" />
    </fragment>

    <fragment
        android:id="@+id/navigation_gaming"
        android:name="com.optimove.android.optimovemobilesdk.ui.gaming.GamingFragment"
        android:label="@string/gaming"
        tools:layout="@layout/fragment_gaming" >
    </fragment>

    <fragment
        android:id="@+id/navigation_inbox"
        android:name="com.optimove.android.optimovemobilesdk.ui.inbox.InboxFragment"
        android:label="@string/inbox"
        tools:layout="@layout/fragment_inbox" />

    <fragment
        android:id="@+id/navigation_credentials"
        android:name="com.optimove.android.optimovemobilesdk.ui.credentials.CredentialsFragment"
        android:label="@string/credentials"
        tools:layout="@layout/fragment_credentials" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.optimove.android.optimovemobilesdk.ui.dashboard.DashboardFragment"
        android:label="@string/dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_location"
        android:name="com.optimove.android.optimovemobilesdk.ui.location.LocationFragment"
        android:label="@string/my_location"
        tools:layout="@layout/fragment_location" />

    <fragment
        android:id="@+id/navigation_preference_center"
        android:name="com.optimove.android.optimovemobilesdk.ui.preferencecenter.PreferenceCenterFragment"
        android:label="@string/preference_center"
        tools:layout="@layout/fragment_preference_center" />

</navigation>